--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,42 @@
-alembic==0.7.6
-blinker==1.3
+Django==1.8
 Flask==0.10.1
-Flask-HTTPAuth==2.5.0
-Flask-Login==0.2.11
+Flask-Bootstrap==3.3.5.2
+Flask-Breadcrumbs==0.3.0
+Flask-Login==0.2.7
 Flask-Mail==0.9.1
-Flask-Migrate==1.4.0
-Flask-Script==2.0.5
+Flask-Menu==0.3.0
+Flask-Migrate==1.3.0
+Flask-Moment==0.5.0
+Flask-RESTful==0.3.3
+Flask-Restless==0.17.0
 Flask-SQLAlchemy==2.0
-itsdangerous==0.24
+Flask-Script==2.0.5
+Flask-WTF==0.11
 Jinja2==2.7.3
 Mako==1.0.1
 MarkupSafe==0.23
-SQLAlchemy==1.0.6
-Werkzeug==0.10.4
+MySQL-python==1.2.3
+SQLAlchemy==0.9.8
+WTForms==2.0.2
+Werkzeug==0.10.1
+alembic==0.7.4
+aniso8601==1.0.0
+arrow==0.6.0
+blinker==1.3
+freeze==1.0.9
+iso8601==0.1.10
+itsdangerous==0.24
+leancloud-sdk==1.2.2
+mimerender==0.5.5
+mysql==0.0.1
+mysql-connector-python==2.0.4
+python-dateutil==2.4.1
+python-mimeparse==0.1.4
+pytz==2015.4
+qiniu==7.0.5
+requests==2.7.0
+six==1.9.0
+virtualenv==12.1.1
+web.py==0.37
+xlrd==0.9.3
+xlwt==0.7.4
